tests/paczka1/small_fuzzy/41289270.err
Error in line 7: cCMy S440 92,1
Error in line 6: 4AozEA S166 18,5
